--- a/appProject/src/app/app.component.html
+++ b/appProject/src/app/app.component.html
@@ -7,11 +7,8 @@
         <th><a class="w3-button w3-border w3-border-white w3-round-medium w3-hover-gray"
             routerLink="auth">Authentification</a></th>
         <th routerLinkActive="active"><a class="w3-button w3-border w3-border-white w3-round-medium w3-hover-gray"
-            routerLink="students">Etudiants</a></th>
-        <th routerLinkActive="active"><a class="w3-button w3-border w3-border-white w3-round-medium w3-hover-gray"
-            routerLink="edit">Nouvel étudiant</a></th>
-        <th routerLinkActive="active"><a class="w3-button w3-border w3-border-white w3-round-medium w3-hover-gray"
-            routerLink="users">Utilisateurs</a></th>
+            routerLink="search">Search</a></th>
+
 
       </tr>
     </div>
