--- a/appProject/src/app/search/search.component.html
+++ b/appProject/src/app/search/search.component.html
@@ -1,1 +1,7 @@
-<input type="text" class="form-control" [(ngModel)]="streamerName" />
+  <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+
+    <input type="text" class="form-control" [(ngModel)]="streamerName" />
+    <button type="submit" class="btn btn-primary" [disabled]="searchForm.invalid">
+      Valider
+    </button>
+  </form>
