--- a/appProject/src/app/app.component.html
+++ b/appProject/src/app/app.component.html
@@ -1,22 +1,17 @@
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-collapse">
-      <tr class="nav navbar-nav w3-table w3-bar w3-light-grey ">
-        <th><a class="w3-button w3-border w3-border-white w3-round-medium w3-hover-gray"
-            routerLink="auth">Authentification</a></th>
-        <th routerLinkActive="active"><a class="w3-button w3-border w3-border-white w3-round-medium w3-hover-gray"
-            routerLink="search">Search</a></th>
-
-
-      </tr>
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active">
+          <a routerLink="auth">Authentification</a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="search">Search</a>
+        </li>
+      </ul>
     </div>
   </div>
-  <div class=" w3-center">
-
-    <router-outlet></router-outlet>
-  </div>
-
-
 </nav>
+<div class="d-flex justify-content-md-center align-items-center vh-100">
+  <router-outlet></router-outlet>
+</div>
