--- a/appProject/src/app/search/search.component.html
+++ b/appProject/src/app/search/search.component.html
@@ -1,19 +1,45 @@
-  <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-
-    <input type="text" class="form-control" formControlName="streamerName" [(ngModel)]="streamerName" />
-    <button type="submit" class="btn btn-primary" [disabled]="searchForm.invalid">
-      Valider
-    </button>
-
-  </form>
-  <br>
-  <div *ngIf="dataReceive ">
-    <h1>{{display_name}}<img *ngIf="broadcaster_type" class="fit-picture"
-        src="https://pngset.com/images/instagram-verified-symbol-instagram-verified-logo-cross-graphics-art-transparent-png-806692.png"
-        width="50" height="50">
-    </h1><img class="fit-picture" src={{image}}>
-
-
-    <div> {{description}} </div>
-    Nombre de vue total : {{view_count}}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+        <input
+          type="text"
+          class="form-control"
+          formControlName="streamerName"
+        />
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="searchForm.invalid"
+        >
+          Valider
+        </button>
+      </form>
+      <br />
+      <div *ngIf="isFound && dataReceive">
+        <h1>
+          {{ streamerName
+          }}<img
+            *ngIf="isPartner"
+            class="fit-picture"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Twitter_Verified_Badge.svg/1024px-Twitter_Verified_Badge.svg.png?20211123214859"
+            width="50"
+            height="50"
+          />
+        </h1>
+        <img class="fit-picture" src="{{ streamerProfileImage }}" />
+        <div>{{ streamerDescription }}</div>
+        Nombre de vues total : {{ streamerViewCount }}
+      </div>
+      <div *ngIf="!isFound && dataReceive">
+        <h1>Ce streamer n'existe pas.</h1>
+        <img
+          class="fit-picture"
+          src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/8e2f5370244303.5b9d01a5d7cd5.gif"
+          width="500"
+          height="500"
+        />
+      </div>
+    </div>
   </div>
+</div>
