--- a/appProject/src/app/app.component.html
+++ b/appProject/src/app/app.component.html
@@ -1,17 +1,20 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li routerLinkActive="active">
-          <a routerLink="auth">Authentification</a>
-        </li>
-        <li routerLinkActive="active">
-          <a routerLink="search">Search</a>
-        </li>
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Streamers</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active" routerLinkActive="active">
+        <a class="nav-link" routerLink="auth">Authentification</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="search">Search</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="followed">Followed</a>
+      </li>
+    </ul>
   </div>
 </nav>
-<div class="d-flex justify-content-md-center align-items-center vh-100">
+
+<div>
   <router-outlet></router-outlet>
 </div>
