--- a/appProject/src/app/app.component.html
+++ b/appProject/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="followed">Followed</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="home">Home</a>
+      </li>
     </ul>
   </div>
 </nav>
