--- a/appProject/src/app/app.component.html
+++ b/appProject/src/app/app.component.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Streamers</a>
+  <a class="navbar-brand" routerLink="home">Streamers</a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="home">Home</a>
+      </li>
       <li class="nav-item active" routerLinkActive="active">
         <a class="nav-link" routerLink="auth">Authentification</a>
       </li>
@@ -11,9 +14,7 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="followed">Followed</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="home">Home</a>
-      </li>
+
     </ul>
   </div>
 </nav>
