--- a/appProject/src/app/streamer/streamer.component.html
+++ b/appProject/src/app/streamer/streamer.component.html
@@ -1,20 +1,11 @@
 <div class="card" style="display: inline-block; margin-left: 55px; margin-top: 45px;">
   <div class="card-body">
     <h5 class="card-title">
-      <img
-        class="fit-picture"
-        src="{{ streamerProfileImage }}"
-        width="50"
-        height="50"
-      />
+      <img class="fit-picture" src="{{ streamerProfileImage }}" width="50" height="50" />
       {{ streamerName }}
-      <img
-        *ngIf="isPartner"
-        class="fit-picture"
+      <img *ngIf="isPartner" class="fit-picture"
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Twitter_Verified_Badge.svg/1024px-Twitter_Verified_Badge.svg.png?20211123214859"
-        width="25"
-        height="25"
-      />
+        width="25" height="25" />
     </h5>
     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
     <p class="card-text">
