--- a/appProject/src/app/streamer/streamer.component.html
+++ b/appProject/src/app/streamer/streamer.component.html
@@ -9,8 +9,7 @@
     </h5>
     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
     <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
+      {{ streamerDescription }}
     </p>
     <button class="btn btn-primary btn-sm" (click)="onSwitch()">Unfollow</button>
     <br>
