--- a/appProject/src/app/list-calendar/list-calendar.component.scss
+++ b/appProject/src/app/list-calendar/list-calendar.component.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald:500');
+
 #title{
+  font-family: 'Oswald', sans-serif;
 
   font-weight: bold;
 }
