--- a/appProject/src/app/calendar/calendar.component.scss
+++ b/appProject/src/app/calendar/calendar.component.scss
@@ -1,4 +1,30 @@
 #title{
 
   font-weight: bold;
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+
+}
+
+.planning{
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+
+
+
+}
+
+.noplanning{
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: 10%;
+
+
+
 }
