--- a/appProject/src/app/followed-streamers/followed-streamers.component.html
+++ b/appProject/src/app/followed-streamers/followed-streamers.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1>Streamers suivis</h1>
+      <h1 class="title">Streamers suivis</h1>
       <ul class="list-group">
         <li class="list-group-item" *ngFor="let streamer of streamers">
           <h5 class="card-title">
