--- a/appProject/src/app/list-calendar/list-calendar.component.html
+++ b/appProject/src/app/list-calendar/list-calendar.component.html
@@ -10,6 +10,6 @@
   </div>
 </div>
 
-<div *ngIf="finalCalendar.length ===0">
+<div class="nocalendar" *ngIf="finalCalendar.length ===0">
   You are following no Streamer with a Calendar
 </div>
