--- a/appProject/src/app/list-calendar/list-calendar.component.scss
+++ b/appProject/src/app/list-calendar/list-calendar.component.scss
@@ -5,3 +5,12 @@
 
   font-weight: bold;
 }
+.nocalendar{
+  font-family: 'Oswald', sans-serif;
+text-align: center;
+  font-weight: bold;
+  margin-top: 10%;
+  font-size: 30px;
+
+
+}
