--- a/appProject/src/app/followed-streamers/followed-streamers.component.scss
+++ b/appProject/src/app/followed-streamers/followed-streamers.component.scss
@@ -3,3 +3,10 @@ text-align: center;
   font-weight: bold;
   margin-top: 10%;
   font-size: 30px;}
+
+
+  .noFollow{font-family: 'Oswald', sans-serif;
+    text-align: center;
+      font-weight: bold;
+      margin-top: 10%;
+      font-size: 30px;}
