--- a/appProject/src/app/streamer/streamer.component.html
+++ b/appProject/src/app/streamer/streamer.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="display: inline-block; margin-left: 55px; margin-top: 45px;">
+<div class="card" style="display: inline-block; margin-left: auto; margin-top: auto;">
   <div class="card-body">
     <h5 class="card-title">
       <img class="fit-picture" src="{{ streamerProfileImage }}" width="50" height="50" />
